# mmcli

./: .gitignore  PUBLISHING.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
app/: __init__.py  cli.py
app/tools/: media_converter.py  media_downloader.py  youtube_downloader.py
app/utils/: command_manager.py  constants.py  media_format.py
doc/: INSTALL_README.md  commands.md
docs/plans/: 2026-07-01-youtube-downloader-redesign.md
docs/reviews/: 2026-07-01-youtube-downloader-redesign-review.md
docs/specs/: 2026-07-01-youtube-downloader-redesign-design.md
docs/verifications/: 2026-07-01-youtube-downloader-redesign-verify.md
tests/: test_command_manager.py  test_integration.py  test_media_converter.py  test_media_downloader.py  test_media_format.py
