[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmcli"
version = "0.1.0b1"
description = "A multimedia CLI tool for downloading and converting videos, audio, and images"
authors = [{name = "rizkirakasiwi"}]
dependencies = [
    "ffmpeg-python>=0.2.0",
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=7.0",
    "pytubefix>=10.10.1",
]
requires-python = ">=3.12"

[project.optional-dependencies]
test = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "pytest-asyncio>=1.0",
]

[project.scripts]
mmcli = "main:main"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["samples*", "tests*", "venv*", "build*", "dist*"]

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]
