[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmcli"
version = "0.1.0b1"
description = "A command-line YouTube downloader with built-in audio/video format conversion"
authors = [{name = "rizkirakasiwi"}]
dependencies = [
    "ffmpeg-python>=0.2.0",
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=7.0",
    "pytubefix>=10.10.1",
]
requires-python = ">=3.12"

[project.optional-dependencies]
test = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "pytest-asyncio>=1.0",
]

[project.scripts]
mmcli = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["samples*", "tests*", "venv*", "build*", "dist*"]

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

[dependency-groups]
dev = ["ruff>=0.15"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# app/__init__.py is the intentional public re-export surface (see CLAUDE.md);
# unused-import (F401) warnings there are expected re-exports.
"app/__init__.py" = ["F401"]
