[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmcli-dl"
version = "0.1.0b1"
description = "A command-line YouTube downloader with built-in audio/video format conversion"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "rizkirakasiwi" }]
keywords = ["youtube", "downloader", "cli", "ffmpeg", "video", "audio", "playlist"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
dependencies = [
    "ffmpeg-python>=0.2.0",
    "pytubefix>=10.10.1",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "pytest-asyncio>=1.0",
]

[project.urls]
Homepage = "https://github.com/rizukirr/mmcli"
Repository = "https://github.com/rizukirr/mmcli"
Issues = "https://github.com/rizukirr/mmcli/issues"

[project.scripts]
mmcli = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["samples*", "tests*", "venv*", "build*", "dist*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

[dependency-groups]
dev = ["ruff>=0.15"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# app/__init__.py is the intentional public re-export surface (see CLAUDE.md);
# unused-import (F401) warnings there are expected re-exports.
"app/__init__.py" = ["F401"]
